--- a/filter/baro/baro_all_tune/Makefile
+++ b/filter/baro/baro_all_tune/Makefile
@@ -1,7 +1,7 @@
 all:
 	g++ main.cpp -o main.out -std=c++11 -lm
 clean:
-	rm main.out all.txt
+	rm main.out all.txt alt.txt vel.txt acc.txt
 plot:
 	gnuplot -e "load 'plot.gp'; pause -1"
 
